Reimplementación JSX, corrección de errores, creación de DEMO funcional

--- a/demo/index.html
+++ b/demo/index.html
@@ -32,8 +32,9 @@
   </main>
 
   <!-- Tu script reactv y lógica personalizada -->
-  <script src="http://cdn.underdevelopment.work/generaljs/general.min.js"></script>
+  <script src="http://cdn.underdevelopment.work/generaljs/general.min.js">
+  </script>
   <script src="../dist/reactive.general.min.js"></script>
-  <script src="demo.js"></script>
+  <script src="dist/bundle.js"></script>
 </body>
 </html>
